# scrapper_nsi

./: .gitignore  pyproject.toml
nsi_eaeunion_org/: main.py
nsi_eaeunion_org/config/: settings.py
nsi_eaeunion_org/database/: connect.py  database.py  tables.py
nsi_eaeunion_org/parser/: parser.py
nsi_eaeunion_org/storage/: database.db
nsi_eaeunion_org/utils/: check_path.py  logger.py
