[tool.poetry]
name = "fp-crc-ru"
version = "0.1.0"
description = ""
authors = ["Alone-elvi <alone.elvi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.envs.dependencies]
envparse = "^0.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.parsers.dependencies]
playwright = "^1.41.2"


[tool.poetry.group.data.dependencies]
pandas = "^2.2.0"


[tool.poetry.group.excel.dependencies]
openpyxl = "^3.1.2"


[tool.poetry.group.database.dependencies]
aiosqlite = "^0.20.0"


[tool.poetry.group.parser.dependencies]
playwright = "^1.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
